--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 PORT=4000
-MONGO_URI=mongodb+srv://mnalbant9046:deneme12345@cluster0.8gehl.mongodb.net/shoestore?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://mnalbant9046:deneme12345@cluster0.hr5pl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=12345
+COOKIE_SECRET=12345
